<resources>
    <string name="app_name">TaskApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call_list">Call List</string>
    <string name="buy_list">BUY LIST</string>
    <string name="sell_list">SELL LIST</string>
    <string name="name">Name :</string>
    <string name="number">Number : </string>
    <string name="price">Price : </string>
    <string name="quantity">Quantity : </string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>