<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.home_fragment.HomeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/callListButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/call_list"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toTopOf="@+id/buyList"
        app:layout_constraintEnd_toEndOf="@+id/buyList"
        app:layout_constraintStart_toStartOf="@+id/buyList"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buyList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:text="@string/buy_list"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toTopOf="@+id/sellList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callListButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sellList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sell_list"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buyList"
        app:layout_constraintStart_toStartOf="@+id/buyList"
        app:layout_constraintTop_toBottomOf="@+id/buyList"/>

</androidx.constraintlayout.widget.ConstraintLayout>